--- a/wp-content/themes/ishichatheme/parts/footer.html
+++ b/wp-content/themes/ishichatheme/parts/footer.html
@@ -1,11 +1,63 @@
-<!-- wp:group {"layout":{"inherit":true}} -->
-<div class="wp-block-group">
-	<!-- wp:group {"style":{"spacing":{"padding":{"top":"80px","bottom":"30px"}}}} -->
-	<div class="wp-block-group" style="padding-top:80px;padding-bottom:30px">
-		<!-- wp:paragraph {"align":"center"} -->
-		<p class="has-text-align-center">Proudly Powered by <a href="https://wordpress.org" rel="nofollow">WordPress</a></p>
-		<!-- /wp:paragraph -->
-	</div>
-	<!-- /wp:group -->
-</div>
+<!-- wp:group {"className":"footer.wp-block-group h4 {     -webkit-text-stroke: 1px #000000;     text-shadow: 3px 3px 0px #000000;     margin-bottom: 15px !important; }  footer.wp-block-group p {     font-weight: 700;     font-size: 0.9rem;     margin-top: 20px; }","style":{"spacing":{"padding":{"top":"var:preset|spacing|60","bottom":"var:preset|spacing|60","left":"var:preset|spacing|60","right":"var:preset|spacing|60"},"margin":{"top":"0","bottom":"0"}},"border":{"width":"0px","style":"none"}},"backgroundColor":"yellow","fontSize":"medium","layout":{"type":"constrained"}} -->
+<div class="wp-block-group footer.wp-block-group h4 { -webkit-text-stroke: 1px #000000; text-shadow: 3px 0px margin-bottom: 15px !important; } p font-weight: 700; font-size: 0.9rem; margin-top: 20px; has-yellow-background-color has-background has-medium-font-size" style="border-style:none;border-width:0px;margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--60);padding-right:var(--wp--preset--spacing--60);padding-bottom:var(--wp--preset--spacing--60);padding-left:var(--wp--preset--spacing--60)"><!-- wp:columns -->
+<div class="wp-block-columns"><!-- wp:column {"width":"66.66%"} -->
+<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:columns {"verticalAlignment":null} -->
+<div class="wp-block-columns"><!-- wp:column {"verticalAlignment":"center"} -->
+<div class="wp-block-column is-vertically-aligned-center"><!-- wp:list -->
+<ul class="wp-block-list"><!-- wp:list-item -->
+<li>Terms &amp; Conditions</li>
+<!-- /wp:list-item -->
+
+<!-- wp:list-item -->
+<li>Privact Policy</li>
+<!-- /wp:list-item -->
+
+<!-- wp:list-item -->
+<li>Content Rules</li>
+<!-- /wp:list-item -->
+
+<!-- wp:list-item -->
+<li>Data Usage</li>
+<!-- /wp:list-item --></ul>
+<!-- /wp:list --></div>
+<!-- /wp:column -->
+
+<!-- wp:column -->
+<div class="wp-block-column"><!-- wp:list -->
+<ul class="wp-block-list"><!-- wp:list-item -->
+<li>About Us</li>
+<!-- /wp:list-item -->
+
+<!-- wp:list-item -->
+<li>Contact Us</li>
+<!-- /wp:list-item -->
+
+<!-- wp:list-item -->
+<li>Manage Account</li>
+<!-- /wp:list-item -->
+
+<!-- wp:list-item -->
+<li>Careers</li>
+<!-- /wp:list-item --></ul>
+<!-- /wp:list --></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns --></div>
+<!-- /wp:column -->
+
+<!-- wp:column {"width":"33.33%"} -->
+<div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:social-links {"iconColor":"black","iconColorValue":"#000000","size":"has-large-icon-size","className":"is-style-logos-only","style":{"border":{"radius":{"topLeft":"0px","topRight":"0px","bottomLeft":"0px","bottomRight":"0px"},"width":"0px","style":"none"},"spacing":{"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"flex","justifyContent":"center"}} -->
+<ul class="wp-block-social-links has-large-icon-size has-icon-color is-style-logos-only" style="border-style:none;border-width:0px;border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-left-radius:0px;border-bottom-right-radius:0px;margin-top:0;margin-bottom:0"><!-- wp:social-link {"service":"instagram"} /-->
+
+<!-- wp:social-link {"service":"facebook"} /-->
+
+<!-- wp:social-link {"service":"tiktok"} /--></ul>
+<!-- /wp:social-links -->
+
+<!-- wp:quote -->
+<blockquote class="wp-block-quote"><!-- wp:paragraph {"align":"center"} -->
+<p class="has-text-align-center">Ishicha All Rights Reserved</p>
+<!-- /wp:paragraph --></blockquote>
+<!-- /wp:quote --></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns --></div>
 <!-- /wp:group -->
