--- a/wp-content/themes/ishichatheme/parts/header.html
+++ b/wp-content/themes/ishichatheme/parts/header.html
@@ -1,7 +1,11 @@
-<header class="wp-block-group alignfull">
-    
-    <div class="wp-block-group">
-        
-        </div>
-    </header>
-<div style="height:50px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|30","bottom":"var:preset|spacing|30"}},"border":{"top":{"style":"none","width":"0px"},"right":{"style":"none","width":"0px"},"bottom":{"style":"solid","width":"6px","color":"var:preset|color|cyan"},"left":{"style":"none","width":"0px"}}},"layout":{"inherit":"true","type":"constrained","justifyContent":"center"}} -->
+<div class="wp-block-group" style="border-top-style:none;border-top-width:0px;border-right-style:none;border-right-width:0px;border-bottom-color:var(--wp--preset--color--cyan);border-bottom-style:solid;border-bottom-width:6px;border-left-style:none;border-left-width:0px;padding-top:var(--wp--preset--spacing--30);padding-bottom:var(--wp--preset--spacing--30)"><!-- wp:group {"className":"header.wp-block-group {      padding-top: 40px !important;      padding-bottom: 40px !important;      margin-top: 0 !important;      display: flex;      align-items: center;  }","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+<div class="wp-block-group header.wp-block-group {  padding-top: 40px !important; padding-bottom: margin-top: 0 display: flex; align-items: center; }"><!-- wp:site-logo {"width":59,"shouldSyncIcon":true,"className":"is-style-default","style":{"layout":{"selfStretch":"fit","flexSize":null}}} /-->
+
+<!-- wp:navigation {"ref":4,"textColor":"black","style":{"layout":{"selfStretch":"fit","flexSize":null},"typography":{"fontStyle":"normal","fontWeight":"600","textTransform":"uppercase"}},"fontSize":"medium","fontFamily":"modern","layout":{"type":"flex","justifyContent":"right"}} /--></div>
+<!-- /wp:group --></div>
+<!-- /wp:group -->
+
+<!-- wp:spacer {"height":"0px","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}}} -->
+<div style="margin-top:0;margin-bottom:0;height:0px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
